Add sending server lock info